// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ADMIN | Pages | TRANSFER TOKENS | EditView renders and matches the snapshot when creating token 1`] = `
.c11 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c17 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c15 {
  padding-right: 8px;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c12 > * {
  margin-left: 0;
  margin-right: 0;
}

.c12 > * + * {
  margin-left: 8px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c13 svg {
  height: 12px;
  width: 12px;
}

.c13 svg > g,
.c13 svg path {
  fill: #ffffff;
}

.c13[aria-disabled='true'] {
  pointer-events: none;
}

.c13:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c13:focus-visible {
  outline: none;
}

.c13:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c46 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c16 {
  height: 100%;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c14 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 .c10 {
  color: #ffffff;
}

.c14[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true'] .c10 {
  color: #666687;
}

.c14[aria-disabled='true'] svg > g,.c14[aria-disabled='true'] svg path {
  fill: #666687;
}

.c14[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c14[aria-disabled='true']:active .c10 {
  color: #666687;
}

.c14[aria-disabled='true']:active svg > g,.c14[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c14:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c14:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c14 svg > g,
.c14 svg path {
  fill: #ffffff;
}

.c5 {
  padding-right: 8px;
}

.c18 {
  padding-right: 56px;
  padding-left: 56px;
}

.c21 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c40 {
  padding-right: 16px;
  padding-left: 16px;
}

.c42 {
  padding-left: 12px;
}

.c7 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c23 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c27 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c29 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c41 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c45 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c19 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c28 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c31 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c20 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c20 > * + * {
  margin-top: 24px;
}

.c22 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c22 > * + * {
  margin-top: 16px;
}

.c26 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c26 > * + * {
  margin-top: 4px;
}

.c24 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c25 {
  grid-column: span 6;
  max-width: 100%;
}

.c30 {
  line-height: 0;
}

.c33 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c33::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c33[aria-disabled='true'] {
  color: inherit;
}

.c33:focus {
  outline: none;
  box-shadow: none;
}

.c32 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c32:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c0:focus-visible {
  outline: none;
}

.c38 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c38:focus {
  outline: none;
}

.c38[aria-disabled='true'] {
  cursor: not-allowed;
}

.c37 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c37:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c43 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c43 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c43 svg path {
  fill: #666687;
}

.c44 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
}

.c44 svg {
  width: 0.375rem;
}

.c39 {
  width: 100%;
}

.c35 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c35:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c36 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c36::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c36:focus-within {
  outline: none;
}

.c34 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c34 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c34 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c34 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c34 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

@media (max-width:68.75rem) {
  .c25 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c25 {
    grid-column: span 12;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/transfer-tokens"
            >
              <span
                aria-hidden="true"
                class="c5 c6"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c7"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c8"
          >
            <div
              class="c1 c9"
            >
              <h1
                class="c10 c11"
              >
                Create Transfer Token
              </h1>
            </div>
            <div
              class="c1 c9 c12"
            >
              <button
                aria-disabled="false"
                class="c13 c14"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c15 c16"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c10 c17"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c18"
      >
        <div
          class="c19 c20"
        >
          <div
            class="c21"
          >
            <div
              class="c19 c22"
            >
              <h2
                class="c23"
              >
                Details
              </h2>
              <div
                class="c24"
              >
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div>
                        <div
                          class="c19 c26"
                        >
                          <label
                            class="c27"
                            for="1"
                          >
                            <div
                              class="c28"
                            >
                              Name
                              <span
                                class="c29 c30"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c31 c32"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c33"
                              id="1"
                              name="name"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div
                      class="c34"
                    >
                      <div>
                        <div
                          class="c19 c26"
                        >
                          <div
                            class="c28"
                          >
                            <label
                              class="c27"
                              for="3"
                            >
                              <div
                                class="c28"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c35"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c36"
                              id="3"
                              name="description"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c25"
                >
                  <div
                    class=""
                  >
                    <div>
                      <div
                        class="c19 c26"
                      >
                        <label
                          class="c27"
                          for="5"
                        >
                          <div
                            class="c28"
                          >
                            Token duration
                            <span
                              class="c29 c30"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c28 c37"
                        >
                          <button
                            aria-disabled="false"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="5 5-label 5-content"
                            class="c38"
                            id="5"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c31 c39"
                          >
                            <div
                              class="c28"
                            >
                              <div
                                class="c40"
                              >
                                <span
                                  class="c41"
                                  id="5-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c28"
                            >
                              <button
                                aria-hidden="true"
                                class="c42 c43 c44"
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c45"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c46"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;

exports[`ADMIN | Pages | TRANSFER TOKENS | EditView renders and matches the snapshot when editing existing token 1`] = `
.c13 {
  font-weight: 600;
  font-size: 2rem;
  line-height: 1.25;
  color: #32324d;
}

.c23 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c32 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 500;
  color: #32324d;
}

.c34 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c2 {
  background: #f6f6f9;
  padding-top: 24px;
  padding-right: 56px;
  padding-bottom: 40px;
  padding-left: 56px;
}

.c3 {
  padding-bottom: 8px;
}

.c21 {
  padding-right: 8px;
}

.c27 {
  background: #ffffff;
  padding: 24px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c28 {
  background: #f6f6f9;
  padding: 12px;
  border-radius: 4px;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c30 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c31 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c31 > * + * {
  margin-top: 4px;
}

.c14 > * {
  margin-left: 0;
  margin-right: 0;
}

.c14 > * + * {
  margin-left: 8px;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c19 svg {
  height: 12px;
  width: 12px;
}

.c19 svg > g,
.c19 svg path {
  fill: #ffffff;
}

.c19[aria-disabled='true'] {
  pointer-events: none;
}

.c19:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c19:focus-visible {
  outline: none;
}

.c19:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c59 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c22 {
  height: 100%;
}

.c20 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
}

.c20 .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 .c12 {
  color: #ffffff;
}

.c20[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c20[aria-disabled='true'] .c12 {
  color: #666687;
}

.c20[aria-disabled='true'] svg > g,.c20[aria-disabled='true'] svg path {
  fill: #666687;
}

.c20[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c20[aria-disabled='true']:active .c12 {
  color: #666687;
}

.c20[aria-disabled='true']:active svg > g,.c20[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c20:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c20:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c20 svg > g,
.c20 svg path {
  fill: #ffffff;
}

.c29 {
  margin-right: 24px;
}

.c29 svg {
  width: 2rem;
  height: 2rem;
}

.c33 {
  word-break: break-all;
}

.c6 {
  padding-right: 8px;
}

.c24 {
  padding-right: 56px;
  padding-left: 56px;
}

.c35 {
  background: #ffffff;
  padding-top: 24px;
  padding-right: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  border-radius: 4px;
  box-shadow: 0px 1px 4px rgba(33,33,52,0.1);
}

.c53 {
  padding-right: 16px;
  padding-left: 16px;
}

.c55 {
  padding-left: 12px;
}

.c9 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c18 {
  font-size: 0.75rem;
  line-height: 1.33;
  font-weight: 600;
  color: #32324d;
}

.c37 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #32324d;
}

.c42 {
  font-size: 0.875rem;
  line-height: 1.43;
  color: #d02b20;
}

.c54 {
  font-size: 0.875rem;
  line-height: 1.43;
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #666687;
}

.c58 {
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c44 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c41 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c25 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c15 svg {
  height: 12px;
  width: 12px;
}

.c15 svg > g,
.c15 svg path {
  fill: #ffffff;
}

.c15[aria-disabled='true'] {
  pointer-events: none;
}

.c15:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c15:focus-visible {
  outline: none;
}

.c15:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c17 {
  height: 100%;
}

.c60 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c60 .c8 {
  color: #ffffff;
}

.c60[aria-disabled='true'] .c8 {
  color: #666687;
}

.c60[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4945ff;
  border: 1px solid #4945ff;
  height: 2rem;
  padding-left: 16px;
  padding-right: 16px;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c16 .c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c16 .c8 {
  color: #ffffff;
}

.c16[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true'] .c8 {
  color: #666687;
}

.c16[aria-disabled='true'] svg > g,.c16[aria-disabled='true'] svg path {
  fill: #666687;
}

.c16[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c16[aria-disabled='true']:active .c8 {
  color: #666687;
}

.c16[aria-disabled='true']:active svg > g,.c16[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c16:hover {
  background-color: #f6f6f9;
}

.c16:active {
  background-color: #eaeaef;
}

.c16 .c8 {
  color: #32324d;
}

.c16 svg > g,
.c16 svg path {
  fill: #32324d;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  outline: none;
}

.c4 svg path {
  fill: #4945ff;
}

.c4 svg {
  font-size: 0.625rem;
}

.c4:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c4:focus-visible {
  outline: none;
}

.c4:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c26 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c26 > * + * {
  margin-top: 24px;
}

.c36 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c36 > * + * {
  margin-top: 16px;
}

.c40 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c40 > * + * {
  margin-top: 4px;
}

.c38 {
  display: grid;
  grid-template-columns: repeat(12,1fr);
  gap: 20px;
}

.c39 {
  grid-column: span 6;
  max-width: 100%;
}

.c43 {
  line-height: 0;
}

.c46 {
  border: none;
  border-radius: 4px;
  padding-bottom: 0.65625rem;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 0.65625rem;
  color: #32324d;
  font-weight: 400;
  font-size: 0.875rem;
  display: block;
  width: 100%;
  background: inherit;
}

.c46::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c46::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c46:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c46::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c46[aria-disabled='true'] {
  color: inherit;
}

.c46:focus {
  outline: none;
  box-shadow: none;
}

.c45 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c45:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c0:focus-visible {
  outline: none;
}

.c51 {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  width: 100%;
  background: transparent;
  border: none;
}

.c51:focus {
  outline: none;
}

.c51[aria-disabled='true'] {
  cursor: not-allowed;
}

.c50 {
  position: relative;
  border: 1px solid #dcdce4;
  padding-right: 12px;
  border-radius: 4px;
  background: #ffffff;
  overflow: hidden;
  min-height: 2.5rem;
  color: #666687;
  background: #eaeaef;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c50:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c56 {
  background: transparent;
  border: none;
  position: relative;
  z-index: 1;
}

.c56 svg {
  height: 0.6875rem;
  width: 0.6875rem;
}

.c56 svg path {
  fill: #666687;
}

.c57 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  border: none;
  cursor: not-allowed;
}

.c57 svg {
  width: 0.375rem;
}

.c52 {
  width: 100%;
}

.c48 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c48:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c49 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
  background: inherit;
}

.c49::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c49::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c49:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c49::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c49:focus-within {
  outline: none;
}

.c47 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c47 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c47 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c47 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c47 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

@media (max-width:68.75rem) {
  .c39 {
    grid-column: span;
  }
}

@media (max-width:34.375rem) {
  .c39 {
    grid-column: span 12;
  }
}

<div>
  <main
    aria-labelledby="main-content-title"
    class="c0"
    id="main-content"
    tabindex="-1"
  >
    <form
      action="#"
      novalidate=""
    >
      <div
        style="height: 0px;"
      >
        <div
          class="c1 c2"
          data-strapi-header="true"
        >
          <div
            class="c1 c3"
          >
            <a
              aria-current="page"
              class="c4 active"
              href="/settings/transfer-tokens"
            >
              <span
                aria-hidden="true"
                class="c5 c6 c7"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 13.3a.2.2 0 01-.2.2H5.74l8.239 8.239a.2.2 0 010 .282L12.14 23.86a.2.2 0 01-.282 0L.14 12.14a.2.2 0 010-.282L11.86.14a.2.2 0 01.282 0L13.98 1.98a.2.2 0 010 .282L5.74 10.5H23.8c.11 0 .2.09.2.2v2.6z"
                    fill="#212134"
                  />
                </svg>
              </span>
              <span
                class="c8 c9"
              >
                Back
              </span>
            </a>
          </div>
          <div
            class="c1 c10"
          >
            <div
              class="c1 c11"
            >
              <h1
                class="c12 c13"
              >
                My super token
              </h1>
            </div>
            <div
              class="c1 c11 c14"
            >
              <button
                aria-disabled="false"
                class="c15 c16"
                name="regenerate"
                type="button"
              >
                <div
                  aria-hidden="true"
                  class="c5 c6 c17"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M15.681 2.804A9.64 9.64 0 0011.818 2C6.398 2 2 6.48 2 12c0 5.521 4.397 10 9.818 10 2.03 0 4.011-.641 5.67-1.835a9.987 9.987 0 003.589-4.831 1.117 1.117 0 00-.664-1.418 1.086 1.086 0 00-1.393.676 7.769 7.769 0 01-2.792 3.758 7.546 7.546 0 01-4.41 1.428V4.222h.002a7.492 7.492 0 013.003.625 7.61 7.61 0 012.5 1.762l.464.551-2.986 3.042a.186.186 0 00.129.316H22V3.317a.188.188 0 00-.112-.172.179.179 0 00-.199.04l-2.355 2.4-.394-.468-.02-.02a9.791 9.791 0 00-3.239-2.293zm-3.863 1.418V2v2.222zm0 0v15.556c-4.216 0-7.636-3.484-7.636-7.778s3.42-7.777 7.636-7.778z"
                      fill="#212134"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <span
                  class="c8 c18"
                >
                  Regenerate
                </span>
              </button>
              <button
                aria-disabled="false"
                class="c19 c20"
                type="submit"
              >
                <div
                  aria-hidden="true"
                  class="c1 c21 c22"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20.727 2.97a.2.2 0 01.286 0l2.85 2.89a.2.2 0 010 .28L9.554 20.854a.2.2 0 01-.285 0l-9.13-9.243a.2.2 0 010-.281l2.85-2.892a.2.2 0 01.284 0l6.14 6.209L20.726 2.97z"
                      fill="#212134"
                    />
                  </svg>
                </div>
                <span
                  class="c12 c23"
                >
                  Save
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c5 c24"
      >
        <div
          class="c5 c25 c26"
        >
          <div
            class="c1 c27 c11"
          >
            <div
              class="c1 c28 c11 c29"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17 14h-4.34a6 6 0 110-4H23v4h-2v4h-4v-4zM7 14a2 2 0 100-4 2 2 0 000 4z"
                  fill="#8E8EA9"
                />
              </svg>
            </div>
            <div
              class="c1 c30 c31"
            >
              <div
                class="c1 c11"
              >
                <span
                  class="c12 c32 c33"
                >
                  This token isn’t accessible anymore.
                </span>
              </div>
              <span
                class="c12 c34"
              >
                For security reasons, you can only see your token once.
              </span>
            </div>
          </div>
          <div
            class="c5 c35"
          >
            <div
              class="c5 c25 c36"
            >
              <h2
                class="c8 c37"
              >
                Details
              </h2>
              <div
                class="c5 c38"
              >
                <div
                  class="c39"
                >
                  <div
                    class="c5 "
                  >
                    <div>
                      <div>
                        <div
                          class="c5 c25 c40"
                        >
                          <label
                            class="c8 c18"
                            for="7"
                          >
                            <div
                              class="c5 c41"
                            >
                              Name
                              <span
                                class="c8 c42 c43"
                              >
                                *
                              </span>
                            </div>
                          </label>
                          <div
                            class="c5 c44 c45"
                          >
                            <input
                              aria-disabled="false"
                              aria-invalid="false"
                              aria-required="true"
                              class="c46"
                              id="7"
                              name="name"
                              value="My super token"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c39"
                >
                  <div
                    class="c5 "
                  >
                    <div
                      class="c47"
                    >
                      <div>
                        <div
                          class="c5 c25 c40"
                        >
                          <div
                            class="c5 c41"
                          >
                            <label
                              class="c8 c18"
                              for="9"
                            >
                              <div
                                class="c5 c41"
                              >
                                Description
                              </div>
                            </label>
                          </div>
                          <div
                            class="c48"
                          >
                            <textarea
                              aria-invalid="false"
                              aria-required="false"
                              class="c49"
                              id="9"
                              name="description"
                            >
                              This describe my super token
                            </textarea>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="c39"
                >
                  <div
                    class="c5 "
                  >
                    <div>
                      <div
                        class="c5 c25 c40"
                      >
                        <label
                          class="c8 c18"
                          for="11"
                        >
                          <div
                            class="c5 c41"
                          >
                            Token duration
                            <span
                              class="c8 c42 c43"
                            >
                              *
                            </span>
                          </div>
                        </label>
                        <div
                          class="c5 c41 c50"
                          disabled=""
                        >
                          <button
                            aria-disabled="true"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="11 11-label 11-content"
                            class="c51"
                            id="11"
                            name="lifespan"
                            type="button"
                          />
                          <div
                            class="c5 c44 c52"
                          >
                            <div
                              class="c5 c41"
                            >
                              <div
                                class="c5 c53"
                              >
                                <span
                                  class="c8 c54"
                                  id="11-content"
                                >
                                  Select
                                </span>
                              </div>
                            </div>
                            <div
                              class="c5 c41"
                            >
                              <button
                                aria-hidden="true"
                                class="c5 c55 c56 c57"
                                disabled=""
                                tabindex="-1"
                                title="Carret Down Button"
                                type="button"
                              >
                                <svg
                                  fill="none"
                                  height="1em"
                                  viewBox="0 0 14 8"
                                  width="1em"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    clip-rule="evenodd"
                                    d="M14 .889a.86.86 0 01-.26.625L7.615 7.736A.834.834 0 017 8a.834.834 0 01-.615-.264L.26 1.514A.861.861 0 010 .889c0-.24.087-.45.26-.625A.834.834 0 01.875 0h12.25c.237 0 .442.088.615.264a.86.86 0 01.26.625z"
                                    fill="#32324D"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <span
                      class="c8 c58"
                    >
                      Expiration date: Unlimited
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </main>
  <div
    class="c59"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
</div>
`;
